--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,28 +1,28 @@
 [versions]
 # GeckoLib
-    geckolib = "4.5.4.1"
+    geckolib = "4.5.5"
 
 # General Dependencies
-    minecraft-range = "[1.20.6,)"
-    minecraft = "1.20.6"
+    minecraft-range = "[1.21,)"
+    minecraft = "1.21"
     parchment-minecraft = "1.20.6"
     parchment = "2024.06.02"
 
 # Fabric Settings
     fabric = "0.15.11"
-    fabric-api = "0.100.0+1.20.6"
+    fabric-api = "0.100.1+1.21"
 
 # Forge Settings
-    forge-fml-range = "[50,)"
-    forge-range = "[50.1.0,)"
-    forge = "50.1.3"
-    forge-mc = "1.20.6-50.1.3"
+    forge-fml-range = "[51,)"
+    forge-range = "[51.0.0,)"
+    forge = "51.0.5"
+    forge-mc = "1.21-51.0.5"
     jopt-simple = "5.0.4"
 
 # Neoforge Settings
-    neoforge-loader-range = "[2,)"
-    neoforge-range = "[20.6.115,)"
-    neoforge = "20.6.115"
+    neoforge-loader-range = "[3,)"
+    neoforge-range = "[21.0.2-beta,)"
+    neoforge = "21.0.2-beta"
 
 # Dependencies
     mixin = "0.8.6"
@@ -34,7 +34,7 @@
     plugin-minotaur = "2.8.7"
     plugin-curseforge-gradle = "1.1.24"
     plugin-idea-ext = "1.1.8"
-    plugin-forge-gradle = "[6.0,6.2)"
+    plugin-forge-gradle = "[6.0.24,6.2)"
     plugin-mixin = "0.7.+"
     plugin-parchment-forge-gradle = "1.+"
     plugin-neoforge-gradle = "7.0.142"
@@ -55,10 +55,10 @@
     minecraft = { group = "com.mojang", name = "minecraft", version.ref = "minecraft" }
 
 # Testing
-    examplemod-common = { group = "software.bernie.geckolib", name = "geckolib-examples-ml-common-1.20.6", version.ref = "examplemod" }
-    examplemod-fabric = { group = "software.bernie.geckolib", name = "geckolib-examples-ml-fabric-1.20.6", version.ref = "examplemod" }
-    examplemod-forge = { group = "software.bernie.geckolib", name = "geckolib-examples-ml-forge-1.20.6", version.ref = "examplemod" }
-    examplemod-neoforge = { group = "software.bernie.geckolib", name = "geckolib-examples-ml-neoforge-1.20.6", version.ref = "examplemod" }
+    examplemod-common = { group = "software.bernie.geckolib", name = "geckolib-examples-ml-common-1.21", version.ref = "examplemod" }
+    examplemod-fabric = { group = "software.bernie.geckolib", name = "geckolib-examples-ml-fabric-1.21", version.ref = "examplemod" }
+    examplemod-forge = { group = "software.bernie.geckolib", name = "geckolib-examples-ml-forge-1.21", version.ref = "examplemod" }
+    examplemod-neoforge = { group = "software.bernie.geckolib", name = "geckolib-examples-ml-neoforge-1.21", version.ref = "examplemod" }
 
 # Other
     jopt-simple = { group = "net.sf.jopt-simple", name = "jopt-simple", version.ref = "jopt-simple" } # Forge's temporary hacky solution
