Add access modifiers for stale buffer check

--- a/neoforge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/neoforge/src/main/resources/META-INF/accesstransformer.cfg
@@ -7,6 +7,7 @@ public net.minecraft.client.model.AgeableListModel babyHeadScale
 public net.minecraft.client.model.AgeableListModel babyBodyScale
 public net.minecraft.client.model.AgeableListModel bodyYOffset
 public net.minecraft.client.renderer.LevelRenderer renderBuffers
+public com.mojang.blaze3d.vertex.BufferBuilder building
 
 public net.minecraft.client.renderer.entity.ItemRenderer blockEntityRenderer
 public net.minecraft.client.renderer.LevelRenderer shouldShowEntityOutlines()Z
