--- a/forge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/forge/src/main/resources/META-INF/accesstransformer.cfg
@@ -7,7 +7,7 @@ public net.minecraft.client.model.AgeableListModel f_102010_ # babyHeadScale
 public net.minecraft.client.model.AgeableListModel f_102011_ # babyBodyScale
 public net.minecraft.client.model.AgeableListModel f_102012_ # bodyYOffset
 public net.minecraft.client.renderer.LevelRenderer f_109464_ # renderBuffers
-public com.mojang.blaze3d.vertex.BufferBuilder m_85732_()Z # building
+public com.mojang.blaze3d.vertex.BufferBuilder f_85661_ # building
 
 public net.minecraft.client.renderer.entity.ItemRenderer f_174223_ # blockEntityRenderer
 public net.minecraft.client.renderer.LevelRenderer m_109817_()Z # shouldShowEntityOutlines
