--- a/forge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/forge/src/main/resources/META-INF/accesstransformer.cfg
@@ -8,6 +8,7 @@ public net.minecraft.client.model.AgeableListModel f_102011_ # babyBodyScale
 public net.minecraft.client.model.AgeableListModel f_102012_ # bodyYOffset
 public net.minecraft.client.renderer.LevelRenderer f_109464_ # renderBuffers
 public com.mojang.blaze3d.vertex.BufferBuilder f_85661_ # building
+public net.minecraft.client.renderer.entity.EntityRenderDispatcher f_114362_ # renderers
 
 public net.minecraft.client.renderer.entity.ItemRenderer f_174223_ # blockEntityRenderer
 public net.minecraft.client.renderer.LevelRenderer m_109817_()Z # shouldShowEntityOutlines
