Add additional handling for buffer building, fingers crossed?

--- a/forge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/forge/src/main/resources/META-INF/accesstransformer.cfg
@@ -12,3 +12,10 @@ public net.minecraft.client.renderer.entity.EntityRenderDispatcher f_114362_ # r
 
 public net.minecraft.client.renderer.entity.ItemRenderer f_174223_ # blockEntityRenderer
 public net.minecraft.client.renderer.LevelRenderer m_109817_()Z # shouldShowEntityOutlines
+
+# TEMP FOR BUFFERBUILDER
+public net.minecraft.client.renderer.OutlineBufferSource$EntityOutlineGenerator
+public com.mojang.blaze3d.vertex.VertexMultiConsumer$Double
+public net.minecraft.client.renderer.OutlineBufferSource$EntityOutlineGenerator <init>(Lcom/mojang/blaze3d/vertex/VertexConsumer;I)V # <init>
+public com.mojang.blaze3d.vertex.VertexMultiConsumer$Double f_86171_ # first
+public com.mojang.blaze3d.vertex.VertexMultiConsumer$Double f_86172_ # second
