--- a/neoforge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/neoforge/src/main/resources/META-INF/accesstransformer.cfg
@@ -12,3 +12,10 @@ public net.minecraft.client.renderer.entity.EntityRenderDispatcher renderers
 
 public net.minecraft.client.renderer.entity.ItemRenderer blockEntityRenderer
 public net.minecraft.client.renderer.LevelRenderer shouldShowEntityOutlines()Z
+
+# TEMP FOR BUFFERBUILDER
+public net.minecraft.client.renderer.OutlineBufferSource$EntityOutlineGenerator
+public com.mojang.blaze3d.vertex.VertexMultiConsumer$Double
+public net.minecraft.client.renderer.OutlineBufferSource$EntityOutlineGenerator <init>(Lcom/mojang/blaze3d/vertex/VertexConsumer;I)V # <init>
+public com.mojang.blaze3d.vertex.VertexMultiConsumer$Double first # first
+public com.mojang.blaze3d.vertex.VertexMultiConsumer$Double second # second
