--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 # GeckoLib
-    geckolib = "4.5.7"
+    geckolib = "4.5.8"
 
 # General Dependencies
     minecraft-range = "[1.21,)"
@@ -30,6 +30,7 @@
     mixinextras = "0.3.5"
     mixinextras-range = "[0.3.5,)"
     examplemod = "1.0.0"
+    iris = "kuOV4Ece"
 
 # Plugins
     plugin-minotaur = "2.8.7"
@@ -63,6 +64,7 @@
 
 # Other
     jopt-simple = { group = "net.sf.jopt-simple", name = "jopt-simple", version.ref = "jopt-simple" } # Forge's temporary hacky solution
+    iris = { group = "maven.modrinth", name = "iris", version.ref = "iris" }
 
 [plugins]
 # Publishing
