--- a/gradle.properties
+++ b/gradle.properties
@@ -19,7 +19,9 @@ mclib_version=20
 
 # Fabric Settings
 fabric_loader_version=0.15.11
+fabric_loader_version_range=0.15
 fabric_api_version=0.92.2+1.20.1
+fabric_api_version_range=0.92.0+1.20.1
 
 # Forge Settings
 forge_loader_range=[47,)
