--- a/common/src/main/resources/META-INF/accesstransformer-nf.cfg
+++ b/common/src/main/resources/META-INF/accesstransformer-nf.cfg
@@ -6,9 +6,19 @@ public net.minecraft.client.model.AgeableListModel babyZHeadOffset
 public net.minecraft.client.model.AgeableListModel babyHeadScale
 public net.minecraft.client.model.AgeableListModel babyBodyScale
 public net.minecraft.client.model.AgeableListModel bodyYOffset
+
 public net.minecraft.client.renderer.LevelRenderer renderBuffers
 public com.mojang.blaze3d.vertex.BufferBuilder building
 public net.minecraft.client.renderer.entity.EntityRenderDispatcher renderers
+
+public net.minecraft.client.renderer.RenderStateShard$ShaderStateShard
+public net.minecraft.client.renderer.RenderStateShard$TextureStateShard
+public net.minecraft.client.renderer.RenderStateShard$TransparencyStateShard
+public net.minecraft.client.renderer.RenderStateShard$WriteMaskStateShard
+public net.minecraft.client.renderer.RenderStateShard$OverlayStateShard
+public net.minecraft.client.renderer.RenderType$CompositeState
+public net.minecraft.client.renderer.RenderType create(Ljava/lang/String;Lcom/mojang/blaze3d/vertex/VertexFormat;Lcom/mojang/blaze3d/vertex/VertexFormat$Mode;ILnet/minecraft/client/renderer/RenderType$CompositeState;)Lnet/minecraft/client/renderer/RenderType$CompositeRenderType;
+public net.minecraft.client.renderer.RenderType create(Ljava/lang/String;Lcom/mojang/blaze3d/vertex/VertexFormat;Lcom/mojang/blaze3d/vertex/VertexFormat$Mode;IZZLnet/minecraft/client/renderer/RenderType$CompositeState;)Lnet/minecraft/client/renderer/RenderType$CompositeRenderType;
 
 public net.minecraft.client.renderer.entity.ItemRenderer blockEntityRenderer
 public net.minecraft.client.renderer.LevelRenderer shouldShowEntityOutlines()Z
@@ -16,6 +26,6 @@ public net.minecraft.client.renderer.LevelRenderer shouldShowEntityOutlines()Z
 # TEMP FOR BUFFERBUILDER
 public net.minecraft.client.renderer.OutlineBufferSource$EntityOutlineGenerator
 public com.mojang.blaze3d.vertex.VertexMultiConsumer$Double
-public net.minecraft.client.renderer.OutlineBufferSource$EntityOutlineGenerator <init>(Lcom/mojang/blaze3d/vertex/VertexConsumer;I)V # <init>
+public net.minecraft.client.renderer.OutlineBufferSource$EntityOutlineGenerator <init>(Lcom/mojang/blaze3d/vertex/VertexConsumer;I)V
 public com.mojang.blaze3d.vertex.VertexMultiConsumer$Double first # first
 public com.mojang.blaze3d.vertex.VertexMultiConsumer$Double second # second
