Fix incorrect AT on Forge

--- a/forge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/forge/src/main/resources/META-INF/accesstransformer.cfg
@@ -12,7 +12,7 @@ public net.minecraft.client.model.geom.ModelPart f_104212_ # cubes
 
 public com.mojang.blaze3d.vertex.BufferBuilder f_85661_ # building
 
-public net.minecraft.client.renderer.texture.AbstractTexture defaultBlur
+public net.minecraft.client.renderer.texture.AbstractTexture f_348591_ # defaultBlur
 
 # TEMP FOR BUFFERBUILDER
 public net.minecraft.client.renderer.OutlineBufferSource$EntityOutlineGenerator
