--- a/forge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/forge/src/main/resources/META-INF/accesstransformer.cfg
@@ -13,6 +13,7 @@ public net.minecraft.client.model.geom.ModelPart f_104212_ # cubes
 public com.mojang.blaze3d.vertex.BufferBuilder f_85661_ # building
 
 public net.minecraft.client.renderer.texture.AbstractTexture f_348591_ # defaultBlur
+public-f net.minecraft.client.renderer.texture.ReloadableTexture m_373532_(Lcom/mojang/blaze3d/platform/NativeImage;ZZ)V # doLoad
 
 # TEMP FOR BUFFERBUILDER
 public net.minecraft.client.renderer.OutlineBufferSource$EntityOutlineGenerator
