--- a/common/src/main/resources/META-INF/accesstransformer-nf.cfg
+++ b/common/src/main/resources/META-INF/accesstransformer-nf.cfg
@@ -22,6 +22,7 @@ public net.minecraft.client.model.geom.ModelPart cubes
 public com.mojang.blaze3d.vertex.BufferBuilder building
 
 public net.minecraft.client.renderer.texture.AbstractTexture defaultBlur
+public-f net.minecraft.client.renderer.texture.ReloadableTexture doLoad(Lcom/mojang/blaze3d/platform/NativeImage;ZZ)V
 
 # TEMP FOR BUFFERBUILDER
 public net.minecraft.client.renderer.OutlineBufferSource$EntityOutlineGenerator
