--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,21 +11,21 @@
     jopt-simple = "5.0.4"
 
 # Fabric
-    fabric = "0.16.9"
+    fabric = "0.16.10"
     fabric-range = "0.16"
-    fabric-api = "0.112.0+1.21.4"
+    fabric-api = "0.115.1+1.21.4"
     fabric-api-range = "0.110.5+1.21.4"
 
 # Forge
     forge-fml-range = "[54,)"
     forge-range = "[54.0.0,)"
-    forge = "54.0.18"
-    forge-mc = "1.21.4-54.0.18"
+    forge = "54.0.26"
+    forge-mc = "1.21.4-54.0.26"
 
 # Neoforge
     neoforge-loader-range = "[5,)"
-    neoforge-range = "[21.4.0-beta,)"
-    neoforge = "21.4.23-beta"
+    neoforge-range = "[21.4.61-beta,)"
+    neoforge = "21.4.78-beta"
 
 # Dependencies
     mixin = "0.8.7"
@@ -35,7 +35,7 @@
     iris = "kuOV4Ece"
 
 # Plugins
-    plugin-moddevgradle = "2.0.59-beta"
+    plugin-moddevgradle = "2.0.77"
     plugin-minotaur = "2.8.7"
     plugin-curseforge-gradle = "1.1.25"
     plugin-idea-ext = "1.1.8"
