--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,38 +11,38 @@
     jopt-simple = "5.0.4"
 
 # Fabric
-    fabric = "0.16.9"
+    fabric = "0.16.10"
     fabric-range = "0.16"
-    fabric-api = "0.110.0+1.21.1"
+    fabric-api = "0.115.1+1.21.1"
     fabric-api-range = "0.100.0+1.21"
 
 # Forge
     forge-fml-range = "[52,)"
     forge-range = "[52.0.0,)"
-    forge = "52.0.37"
-    forge-mc = "1.21.1-52.0.37"
+    forge = "52.1.0"
+    forge-mc = "1.21.1-52.1.0"
 
 # Neoforge
     neoforge-loader-range = "[4,)"
     neoforge-range = "[21.1.62,)"
-    neoforge = "21.1.90"
+    neoforge = "21.1.132"
 
 # Dependencies
     mixin = "0.8.7"
-    mixinextras = "0.3.5"
+    mixinextras = "0.4.1"
     mixinextras-range = "[0.3.5,)"
     examplemod = "1.0.0"
-    iris = "kuOV4Ece"
+    iris = "oXIoDcGE"
 
 # Plugins
-    plugin-moddevgradle = "2.0.62-beta"
+    plugin-moddevgradle = "2.0.78"
     plugin-minotaur = "2.8.7"
     plugin-curseforge-gradle = "1.1.25"
     plugin-idea-ext = "1.1.8"
     plugin-forge-gradle = "[6.0.24,6.2)"
     plugin-mixin = "0.7.+"
     plugin-parchment-forge-gradle = "1.+"
-    plugin-loom = "1.9-SNAPSHOT"
+    plugin-loom = "1.10-SNAPSHOT"
 
 [libraries]
 # Mixin
