Synced animatable items no longer prevent stacking with each other

--- a/common/src/main/resources/META-INF/accesstransformer-nf.cfg
+++ b/common/src/main/resources/META-INF/accesstransformer-nf.cfg
@@ -23,9 +23,11 @@ public net.minecraft.client.renderer.RenderType create(Ljava/lang/String;Lcom/mo
 public net.minecraft.client.renderer.entity.ItemRenderer blockEntityRenderer
 public net.minecraft.client.renderer.LevelRenderer shouldShowEntityOutlines()Z
 
+public net.minecraft.core.component.PatchedDataComponentMap copyOnWrite
+
 # TEMP FOR BUFFERBUILDER
 public net.minecraft.client.renderer.OutlineBufferSource$EntityOutlineGenerator
 public com.mojang.blaze3d.vertex.VertexMultiConsumer$Double
 public net.minecraft.client.renderer.OutlineBufferSource$EntityOutlineGenerator <init>(Lcom/mojang/blaze3d/vertex/VertexConsumer;I)V
-public com.mojang.blaze3d.vertex.VertexMultiConsumer$Double first # first
-public com.mojang.blaze3d.vertex.VertexMultiConsumer$Double second # second
+public com.mojang.blaze3d.vertex.VertexMultiConsumer$Double first
+public com.mojang.blaze3d.vertex.VertexMultiConsumer$Double second
