--- a/forge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/forge/src/main/resources/META-INF/accesstransformer.cfg
@@ -13,6 +13,8 @@ public net.minecraft.client.renderer.entity.EntityRenderDispatcher f_114362_ # r
 public net.minecraft.client.renderer.entity.ItemRenderer f_174223_ # blockEntityRenderer
 public net.minecraft.client.renderer.LevelRenderer m_109817_()Z # shouldShowEntityOutlines
 
+public net.minecraft.core.component.PatchedDataComponentMap f_316660_ # copyOnWrite
+
 # TEMP FOR BUFFERBUILDER
 public net.minecraft.client.renderer.OutlineBufferSource$EntityOutlineGenerator
 public com.mojang.blaze3d.vertex.VertexMultiConsumer$Double
