--- a/common/src/main/resources/META-INF/accesstransformer-nf.cfg
+++ b/common/src/main/resources/META-INF/accesstransformer-nf.cfg
@@ -1,11 +1,11 @@
-public net.minecraft.client.renderer.RenderType create(Ljava/lang/String;Lcom/mojang/blaze3d/vertex/VertexFormat;Lcom/mojang/blaze3d/vertex/VertexFormat$Mode;ILnet/minecraft/client/renderer/RenderType$CompositeState;)Lnet/minecraft/client/renderer/RenderType$CompositeRenderType;
-public net.minecraft.client.renderer.RenderType create(Ljava/lang/String;Lcom/mojang/blaze3d/vertex/VertexFormat;Lcom/mojang/blaze3d/vertex/VertexFormat$Mode;IZZLnet/minecraft/client/renderer/RenderType$CompositeState;)Lnet/minecraft/client/renderer/RenderType$CompositeRenderType;
-public net.minecraft.client.renderer.RenderStateShard$ShaderStateShard
-public net.minecraft.client.renderer.RenderStateShard$TextureStateShard
-public net.minecraft.client.renderer.RenderStateShard$TransparencyStateShard
-public net.minecraft.client.renderer.RenderStateShard$WriteMaskStateShard
-public net.minecraft.client.renderer.RenderStateShard$OverlayStateShard
-public net.minecraft.client.renderer.RenderType$CompositeState
+#public net.minecraft.client.renderer.RenderType create(Ljava/lang/String;Lcom/mojang/blaze3d/vertex/VertexFormat;Lcom/mojang/blaze3d/vertex/VertexFormat$Mode;ILnet/minecraft/client/renderer/RenderType$CompositeState;)Lnet/minecraft/client/renderer/RenderType$CompositeRenderType;
+#public net.minecraft.client.renderer.RenderType create(Ljava/lang/String;Lcom/mojang/blaze3d/vertex/VertexFormat;Lcom/mojang/blaze3d/vertex/VertexFormat$Mode;IZZLnet/minecraft/client/renderer/RenderType$CompositeState;)Lnet/minecraft/client/renderer/RenderType$CompositeRenderType;
+#public net.minecraft.client.renderer.RenderStateShard$ShaderStateShard
+#public net.minecraft.client.renderer.RenderStateShard$TextureStateShard
+#public net.minecraft.client.renderer.RenderStateShard$TransparencyStateShard
+#public net.minecraft.client.renderer.RenderStateShard$WriteMaskStateShard
+#public net.minecraft.client.renderer.RenderStateShard$OverlayStateShard
+#public net.minecraft.client.renderer.RenderType$CompositeState
 
 public net.minecraft.client.renderer.LevelRenderer shouldShowEntityOutlines()Z
 public net.minecraft.client.renderer.LevelRenderer renderBuffers
