Port forward 4.7.5.x changes

--- a/forge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/forge/src/main/resources/META-INF/accesstransformer.cfg
@@ -15,6 +15,8 @@ public com.mojang.blaze3d.vertex.BufferBuilder f_85661_ # building
 public net.minecraft.client.renderer.texture.AbstractTexture f_348591_ # defaultBlur
 public-f net.minecraft.client.renderer.texture.ReloadableTexture m_373532_(Lcom/mojang/blaze3d/platform/NativeImage;ZZ)V # doLoad
 
+public net.minecraft.core.component.PatchedDataComponentMap f_316660_ # copyOnWrite
+
 # TEMP FOR BUFFERBUILDER
 public net.minecraft.client.renderer.OutlineBufferSource$EntityOutlineGenerator
 public com.mojang.blaze3d.vertex.VertexMultiConsumer$Double
