--- a/common/src/main/resources/META-INF/accesstransformer-nf.cfg
+++ b/common/src/main/resources/META-INF/accesstransformer-nf.cfg
@@ -24,6 +24,8 @@ public com.mojang.blaze3d.vertex.BufferBuilder building
 public net.minecraft.client.renderer.texture.AbstractTexture defaultBlur
 public-f net.minecraft.client.renderer.texture.ReloadableTexture doLoad(Lcom/mojang/blaze3d/platform/NativeImage;ZZ)V
 
+public net.minecraft.core.component.PatchedDataComponentMap copyOnWrite
+
 # TEMP FOR BUFFERBUILDER
 public net.minecraft.client.renderer.OutlineBufferSource$EntityOutlineGenerator
 public com.mojang.blaze3d.vertex.VertexMultiConsumer$Double
