Re-Add Animated textures

--- a/common/src/main/resources/META-INF/accesstransformer-nf.cfg
+++ b/common/src/main/resources/META-INF/accesstransformer-nf.cfg
@@ -32,3 +32,6 @@ public net.minecraft.client.model.geom.ModelPart cubes
 
 # Synced GeoAnimatable ItemStack Stackability
 public net.minecraft.core.component.PatchedDataComponentMap copyOnWrite
+
+# Animated Texture
+public net.minecraft.client.renderer.texture.ReloadableTexture doLoad(Lcom/mojang/blaze3d/platform/NativeImage;ZZ)V
