--- a/common/src/main/resources/META-INF/accesstransformer-nf.cfg
+++ b/common/src/main/resources/META-INF/accesstransformer-nf.cfg
@@ -34,4 +34,4 @@ public net.minecraft.client.model.geom.ModelPart cubes
 public net.minecraft.core.component.PatchedDataComponentMap copyOnWrite
 
 # Animated Texture
-public net.minecraft.client.renderer.texture.ReloadableTexture doLoad(Lcom/mojang/blaze3d/platform/NativeImage;ZZ)V
+public-f net.minecraft.client.renderer.texture.ReloadableTexture doLoad(Lcom/mojang/blaze3d/platform/NativeImage;ZZ)V
