--- a/forge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/forge/src/main/resources/META-INF/accesstransformer.cfg
@@ -34,4 +34,4 @@ public net.minecraft.client.model.geom.ModelPart f_104212_ # cubes
 public net.minecraft.core.component.PatchedDataComponentMap f_316660_ # copyOnWrite
 
 # Animated Texture
-public net.minecraft.client.renderer.texture.ReloadableTexture m_373532_(Lcom/mojang/blaze3d/platform/NativeImage;ZZ)V
+public-f net.minecraft.client.renderer.texture.ReloadableTexture m_373532_(Lcom/mojang/blaze3d/platform/NativeImage;ZZ)V
