Include secondary render pipeline in fix

--- a/common/src/main/resources/META-INF/accesstransformer-nf.cfg
+++ b/common/src/main/resources/META-INF/accesstransformer-nf.cfg
@@ -3,9 +3,11 @@ public net.minecraft.client.renderer.RenderType$CompositeState
 public net.minecraft.client.renderer.RenderType$CompositeState$CompositeStateBuilder setTextureState(Lnet/minecraft/client/renderer/RenderStateShard$EmptyTextureStateShard;)Lnet/minecraft/client/renderer/RenderType$CompositeState$CompositeStateBuilder;
 public net.minecraft.client.renderer.RenderType$CompositeState$CompositeStateBuilder createCompositeState(Z)Lnet/minecraft/client/renderer/RenderType$CompositeState;
 public net.minecraft.client.renderer.RenderType$CompositeState$CompositeStateBuilder setLayeringState(Lnet/minecraft/client/renderer/RenderStateShard$LayeringStateShard;)Lnet/minecraft/client/renderer/RenderType$CompositeState$CompositeStateBuilder;
+public net.minecraft.client.renderer.RenderType$CompositeState$CompositeStateBuilder setOverlayState(Lnet/minecraft/client/renderer/RenderStateShard$OverlayStateShard;)Lnet/minecraft/client/renderer/RenderType$CompositeState$CompositeStateBuilder;
 public net.minecraft.client.renderer.RenderStateShard$TextureStateShard
 public net.minecraft.client.renderer.RenderStateShard VIEW_OFFSET_Z_LAYERING
 public net.minecraft.client.renderer.RenderStateShard NO_LAYERING
+public net.minecraft.client.renderer.RenderStateShard OVERLAY
 public net.minecraft.client.renderer.RenderPipelines register(Lcom/mojang/blaze3d/pipeline/RenderPipeline;)Lcom/mojang/blaze3d/pipeline/RenderPipeline;
 public net.minecraft.client.renderer.RenderPipelines MATRICES_COLOR_FOG_SNIPPET
 public net.minecraft.client.renderer.RenderType create(Ljava/lang/String;IZZLcom/mojang/blaze3d/pipeline/RenderPipeline;Lnet/minecraft/client/renderer/RenderType$CompositeState;)Lnet/minecraft/client/renderer/RenderType$CompositeRenderType;
