--- a/forge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/forge/src/main/resources/META-INF/accesstransformer.cfg
@@ -3,9 +3,11 @@ public net.minecraft.client.renderer.RenderType$CompositeState
 public net.minecraft.client.renderer.RenderType$CompositeState$CompositeStateBuilder m_173290_(Lnet/minecraft/client/renderer/RenderStateShard$EmptyTextureStateShard;)Lnet/minecraft/client/renderer/RenderType$CompositeState$CompositeStateBuilder;
 public net.minecraft.client.renderer.RenderType$CompositeState$CompositeStateBuilder m_110691_(Z)Lnet/minecraft/client/renderer/RenderType$CompositeState;
 public net.minecraft.client.renderer.RenderType$CompositeState$CompositeStateBuilder m_110669_(Lnet/minecraft/client/renderer/RenderStateShard$LayeringStateShard;)Lnet/minecraft/client/renderer/RenderType$CompositeState$CompositeStateBuilder; # setLayeringState
+public net.minecraft.client.renderer.RenderType$CompositeState$CompositeStateBuilder m_110677_(Lnet/minecraft/client/renderer/RenderStateShard$OverlayStateShard;)Lnet/minecraft/client/renderer/RenderType$CompositeState$CompositeStateBuilder; # setOverlayState
 public net.minecraft.client.renderer.RenderStateShard$TextureStateShard
 public net.minecraft.client.renderer.RenderStateShard f_110119_ # VIEW_OFFSET_Z_LAYERING
 public net.minecraft.client.renderer.RenderStateShard f_110117_ # NO_LAYERING
+public net.minecraft.client.renderer.RenderStateShard f_110154_ # OVERLAY
 public net.minecraft.client.renderer.RenderPipelines m_385473_(Lcom/mojang/blaze3d/pipeline/RenderPipeline;)Lcom/mojang/blaze3d/pipeline/RenderPipeline;
 public net.minecraft.client.renderer.RenderPipelines f_382492_
 public net.minecraft.client.renderer.RenderType m_173215_(Ljava/lang/String;IZZLcom/mojang/blaze3d/pipeline/RenderPipeline;Lnet/minecraft/client/renderer/RenderType$CompositeState;)Lnet/minecraft/client/renderer/RenderType$CompositeRenderType;
