--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,25 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
-org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
-mod_version=3.0.31
-archives_base_name=geckolib-forge-1.12.2
-geckolib_core_version=1.0.4
-maven_group=software.bernie.geckolib
 
-#Publishing
-repsyUrl=https://repo.repsy.io/mvn/gandiber/geckolib
+org.gradle.jvmargs = -Xmx6G
+
+# Mod Information
+mod_version = 1.0.0
+maven_group = software.bernie.geckolib
+archives_base_name = riftlib
+
+# Boilerplate Options
+use_mixins = false
+use_coremod = false
+use_assetmover = false
+
+# Access Transformer files should be in the root of `resources` folder and with the filename formatted as: `{archives_base_name}_at.cfg`
+use_access_transformer = true
+
+# Coremod Arguments
+include_mod = false
+
+# Other args
+mc_version = 1.12.2
+jei_version = 4.16.1.302
